<resources>
    <string name="app_name">AppSitiosTour</string>
    <string name="title_activity_maps">App Sitios Tour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonSitioUno_Text">Chichén Itzá</string>
    <string name="buttonSitioDos_Text">El Coliseo de Roma</string>
    <string name="buttonSitioTres_Text">La Gran Muralla China</string>
    <string name="buttonSitioCuatro_Text">Machu Picchu</string>
    <string name="buttonSitioCinco_Text">El Taj Mahal</string>
    <string name="buttonSitioSeis_Text">Cristo Redentor</string>
</resources>
